Bug 150990 - Image is disappeared after save and reopen
Summary: Image is disappeared after save and reopen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Images
  Show dependency treegraph
 
Reported: 2022-09-16 11:54 UTC by Roman Kuznetsov
Modified: 2022-09-20 18:44 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
File example (209.69 KB, application/vnd.oasis.opendocument.text)
2022-09-16 11:54 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2022-09-16 11:54:24 UTC
Description:
Image is disappeared after save and reopen

Steps to Reproduce:
1. Open ODT file from attach => there is an image in left top corner
2. Save it as ODT too
3. Close and reopen the file => there is no the image in left top corner


Actual Results:
Image is disappeared after save and reopen

Expected Results:
Image is always on its place after save and reopen


Reproducible: Always


User Profile Reset: No



Additional Info:
Repro in

Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: f3b5cb5a17a451c9e7d9b47b5e8854c5e126801f
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

but no repro in

Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 515682539623c9d61921c4f89302ffa0a4cb8d24
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded

so, it's a regression
Comment 1 Roman Kuznetsov 2022-09-16 11:54:50 UTC
Created attachment 182489 [details]
File example
Comment 2 Telesto 2022-09-16 12:09:38 UTC
Confirm
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 7a89eae97a970939174d59aa58147eaa194acaee
CPU threads: 8; OS: Mac OS X 12.3.1; UI render: Skia/Metal; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded
Comment 3 Roman Kuznetsov 2022-09-16 12:57:48 UTC
I bisected this one in win-64-7.4 bisect repo and got 

https://git.libreoffice.org/core/commit/b578fa08a25a83abccad2386e12b707586fffb26

https://gerrit.libreoffice.org/c/core/+/131662

CC to: Miklos Vajna

	
Miklos please take a look. Thanks
Comment 4 Commit Notification 2022-09-20 09:55:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/80550ade305b9e68c6281a258d162bc2c413713a

tdf#150990 ODT export: fix zero layout size of scale/scale images

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2022-09-20 09:56:10 UTC
The regression is fixed with the above commit but you may want to still fix your document: setting both the relative width and height to "scale" is broken.
Comment 6 Commit Notification 2022-09-20 18:44:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/5ef5b313ad0f6fdb8f8de0a7463cb2a0c4956f1a

tdf#150990 ODT export: fix zero layout size of scale/scale images

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.